Fix discs covers hover

--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ li #evidence{
 
 .layover .cover{
     width: 100%;
-    height: 100%;
+    height: 98.1%;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.0);
     transition: all 0.4s;
